src/test/ui/feature-gates/feature-gate-postfix_deref.rs
fn main() {
    _ = (&0).*; //~ error: .* syntax is experimental
}
